# Game_services

./: Cargo.toml  README.md  test.sql
database/: Cargo.toml
database-macro/: Cargo.toml
database-macro/src/: lib.rs
database/src/: lib.rs
friends_service/: Cargo.toml
matchmaking_service/: Cargo.toml
proto/: session.proto
session_service/: Cargo.toml  build.rs
session_service/src/: main.rs
src/: main.rs
