[package]
name = "session_service"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.1"
prost-types = "0.14.1"
serde = { version = "1.0.224", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.14.2"
tonic-reflection = "0.14.2"

[build-dependencies]
tonic-build = "0.12.3"
